chore: rewrite README